manifests/deployment-mycv-test-nginx.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mycv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycv
  namespace: mycv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mycv
  template:
    metadata:
      labels:
        app: mycv
    spec:
      containers:
        - name: mycv
          image: nginx:stable
          ports:
            - containerPort: 80
