manifests/deployment-mycv.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mycv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mycv
  namespace: mycv
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mycv
  template:
    metadata:
      labels:
        app: mycv
    spec:
      containers:
        - name: mycv
          image: registry.gitlab.com/itoutposts1/app1-golang:mycv1
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gitlab-auth
