manifests/service-mycv.yaml
apiVersion: v1
kind: Service
metadata:
  name: mycv-svc
  namespace: mycv
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: mycv
